Test case added

--- a/pytest.ini
+++ b/pytest.ini
@@ -8,4 +8,5 @@ markers =
     integration: Integration tests
     e2e: End-to-end tests
     slow: Slow running tests
+    asyncio: Mark test as an asyncio test
 addopts = --verbose
